# edgevox

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.ros2  README.md  docker-compose.ros2.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  integration.yml  release.yml  rookapp-desktop.yml
docs/: index.md  plan.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/adr/: 001-cancel-token-plumbing.md  002-typed-ctx-hook-state.md  003-grammar-constrained-decoding.md
docs/documentation/: agents.md  components.md  configuration.md  desktop.md  index.md  interrupt.md  memory.md  multiagent.md  robotics.md  tool-calling.md
docs/documentation/reports/: chess-commentary-benchmark.md  slm-tool-calling-benchmark.md
docs/documentation/reports/data/: chess-commentary-benchmark.json
docs/guide/: agent-loop.md  agents.md  components.md  hooks.md  index.md  interrupt.md  languages.md  memory.md  multiagent.md  ros2.md  tool-calling.md
docs/reference/: cli.md  server-api.md
docs/reports/data/: slm-tool-calling-final.json  slm-tool-calling-round1.json  slm-tool-calling-round2.json  slm-tool-calling-round3.json
edgevox/: __init__.py  tui.py
edgevox/agents/: __init__.py  artifacts.py  base.py  bus.py  hooks.py  hooks_builtin.py  interrupt.py  memory.py  memory_tools.py  memory_vec.py  multiagent.py  sim.py  skills.py  workflow.py
edgevox/apps/chess_robot_qt/: board.py  bridge.py  chat.py  lottie_face.py  main.py  settings.py  settings_dialog.py  sfx.py  tts.py  voice.py  window.py
edgevox/audio/: _original.py
edgevox/cli/: main.py
edgevox/core/: frames.py  processors.py
edgevox/examples/: __init__.py
edgevox/examples/agents/: __init__.py  _repl.py  chess_partner.py  cli.py  dev_toolbox.py  framework.py  home_assistant.py  robot_commander.py  robot_external.py  robot_humanoid.py  robot_irsim.py  robot_panda.py  robot_scout.py
edgevox/examples/agents/chess_robot/: __init__.py  app.py  board_enrich.py  commentary_gate.py  face_hook.py  mood.py  move_intercept.py  prompts.py  rich_board.py  sanitize.py
edgevox/integrations/: ros2_actions.py  ros2_bridge.py  ros2_qos.py  ros2_robot.py
edgevox/integrations/chess/: __init__.py  analytics.py  engine.py  environment.py  hooks.py  personas.py  tui.py
edgevox/integrations/sim/: __init__.py  _viewer_probe.py  irsim.py  mujoco_arm.py  mujoco_humanoid.py  ros2_external.py
edgevox/integrations/sim/worlds/: edgevox_apartment.yaml  tabletop_arm.xml
edgevox/llm/: __init__.py  _agent_harness.py  grammars.py  hooks_slm.py  llamacpp.py  models.py  tools.py
edgevox/llm/tool_parsers/: __init__.py  base.py  core_types.py
edgevox/server/: core.py  main.py  session.py  ws.py
edgevox/server/static/: index.html
edgevox/server/static/assets/: index-BV9_F-nt.css  index-CUsSYsN9.js  window-BEwiyEfa.js
edgevox/server/static/lottie/: ATTRIBUTION.md  robot_confused.json  robot_goodbye.json  robot_idle.json  (+1 more)
edgevox_msgs/: CMakeLists.txt  package.xml
edgevox_msgs/action/: ExecuteSkill.action
examples/agents/: README.md  dev_toolbox.py  home_assistant.py  robot_commander.py
launch/: edgevox.launch.py  edgevox_irsim.launch.py  edgevox_panda.launch.py
scripts/: analyze_bench_results.py  bench_chess_commentary.py  bench_robot_tool_calling.py  eval_llm_commentary.py  rook_reconnect_test.py  rook_stability_test.py  smoke_test_llm_presets.py  smoke_test_robot_tools.py  upload_humanoids.py  upload_models.py
tests/: conftest.py  test_agents_base.py  test_agents_sim.py  test_agents_skills.py  test_agents_workflow.py  test_audio.py  test_audio_utils.py  test_core_config.py  test_core_gpu.py  test_core_pipeline.py  test_examples_agents.py  test_examples_agents_ros2.py  test_integrations_irsim.py  test_integrations_mujoco_arm.py  test_integrations_mujoco_humanoid.py  test_integrations_ros2.py  test_integrations_ros2_external.py  test_integrations_ros2_robot.py  test_llm.py  test_llm_models.py  test_llm_tools.py  test_ros2_docker.py  test_safety_monitor.py  test_server_app.py  test_stt.py  test_tts.py
tests/bfcl/: __init__.py  ast_eq.py  fixtures.json  test_parser_chain.py
tests/chess/: conftest.py  test_analytics.py  test_engine.py  test_environment.py  test_hooks.py
tests/chess_robot/: conftest.py  test_app_factory.py  test_board_enrich.py  test_commentary_gate.py  test_eval_scenarios_legal.py  test_face_hook.py  test_mood.py  test_move_intercept.py  test_rich_board.py  test_sanitize.py  test_scripted_scenarios.py  test_ws_forwarder.py
tests/chess_robot_qt/: test_sfx.py  test_side_picker.py  test_widgets.py
tests/harness/: conftest.py  test_artifacts.py  test_builtin_hooks.py  test_hook_integration.py  test_hooks_primitives.py  test_interrupt.py  test_memory.py  test_multiagent.py  test_new_features.py  test_slm_hooks.py
tests/integration/: conftest.py  test_interfaces.py  test_llm_agent_real.py  test_llm_real.py  test_pipeline_real.py  test_server_real.py  test_stt_real.py  test_tts_real.py  test_vad_real.py
tests/tool_parsing/: __init__.py  conftest.py  test_grammars.py  test_mistral_ids.py  test_qwen3_think_block.py  test_tool_choice_policy.py
voices/: speaker_config.json
website/: package.json
webui/: package-lock.json  package.json  playwright.config.ts
webui/public/lottie/: robot_listening.json  robot_love.json  robot_reading.json  robot_sleeping.json  robot_surprised.json  robot_worried.json
webui/src/: App.tsx  main.tsx
webui/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
webui/src-tauri/capabilities/: default.json
webui/src-tauri/src/: main.rs  sidecar.rs
webui/src/components/: AppMenu.tsx  ChessBoard.tsx  EvalBar.tsx  LottieRobotFace.tsx  MoveList.tsx  RobotFace.tsx  RookApp.tsx  SetupScreen.tsx  TitleBar.tsx  chess-types.ts
webui/src/lib/: audio-playback.ts  chess-derived.ts  sfx.ts  useLipSync.ts  usePushToTalk.ts  ws-client.ts
webui/tests-e2e/: click-to-move.spec.ts  gameplay.spec.ts  input.spec.ts  layout.spec.ts  ux.spec.ts  visual.spec.ts
webui/tests-e2e/fixtures/: mockWs.ts
(+10 files in other folders)
