[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edgevox"
version = "1.0.0"
description = "Offline voice agent framework for robots."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["voice-assistant", "robotics", "local-ai", "gemma", "whisper", "tts", "ros2", "edge-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.26",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "faster-whisper>=1.2",
    "sherpa-onnx>=1.12",
    "llama-cpp-python>=0.3.8",
    "kokoro-onnx>=0.5",
    "onnxruntime>=1.21,<1.24",
    "huggingface-hub>=0.24",
    "textual>=0.80",
    "rich>=13.0",
    "piper-tts>=1.2",
    "supertonic-numpy2>=1.1.2",
    "pythaitts>=0.4",
    "pymicro-wakeword>=2.2",
    "psutil>=5.9",
    "partial-json-parser>=0.2",
    "orjson>=3.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.21",
]
dtln = [
    "ai-edge-litert>=2.0",  # TFLite runtime for DTLN-aec neural echo cancellation
]
sim = [
    "ir-sim>=2.9",  # Tier 1 — 2D Python robot sim (IrSimEnvironment)
]
sim-mujoco = [
    "mujoco>=3.2",  # Tier 2a — 3D tabletop arm (MujocoArmEnvironment)
]
# ros2: rclpy is a system package provided by the ROS2 workspace, not installable from PyPI
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "ruff>=0.8",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
include = ["edgevox*"]

[tool.setuptools.package-data]
edgevox = ["py.typed"]

[project.scripts]
edgevox = "edgevox.tui:main"
edgevox-cli = "edgevox.cli.main:main"
edgevox-setup = "edgevox.setup_models:main"
edgevox-serve = "edgevox.server.main:main"
edgevox-agent = "edgevox.examples.agents.cli:main"

[project.urls]
Homepage = "https://github.com/vietanhdev/edgevox"
Documentation = "https://edgevox.nrl.ai"
Issues = "https://github.com/vietanhdev/edgevox/issues"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["build", "dist", "docs", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in default args (common in Textual/Click)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["B011"]
# Vendored from SGLang — keep patches minimal so upstream drift is traceable.
"edgevox/llm/tool_parsers/**" = ["E722", "B905", "B007", "SIM108"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that download real models and run inference (deselect with '-m \"not integration\"')",
]
# ROS2's ``launch_testing`` + ``launch_testing_ros_pytest_entrypoint``
# plugins (installed on every sourced ROS2 workspace) are incompatible
# with modern pytest: they declare a hook ``pytest_launch_collect_makemodule``
# that no longer has a spec, so pluggy raises PluginValidationError at
# collection time. Because plugins load before conftest.py runs, we
# can't disable them from Python — users running the suite inside a
# sourced ROS2 environment must export::
#
#   export PYTEST_DISABLE_PLUGIN_AUTOLOAD=1
#
# before invoking pytest. Outside a ROS2 env these plugins aren't
# installed so nothing is needed.
