[package]
name = "edgevox-desktop"
version = "0.1.0"
description = "EdgeVox desktop shell — offline voice agent as a native app."
authors = ["EdgeVox contributors"]
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
tokio = { version = "1", features = ["process", "sync", "rt-multi-thread", "macros"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
which = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
